# gaia-poc

./: .env.example  .gitignore  GAIA_v2_WhitePaper.md  GAIA_v3_WhitePaper.md  GAIA_v4_WhitePaper.md  GAIA_v5_WhitePaper.md  GAIA_v6_WhitePaper.md  LICENSE  PHASE10.md  QUICKSTART.md  README.md  SECURITY.md  backprop_baseline.py  backprop_results.json  docker-compose.yml  gaia_poc.py  gaia_results.json  results.md  worker.Dockerfile
.github/workflows/: release.yml
.jules/: sentinel.md
analysis/: analyze.sh  job_tracker.json
memory/: 2026-02-19.md
phase2/: backprop_baseline_phase2.py  gaia_phase2.py  plot_results.py  results_phase2.md
phase2/results/: evo_hebbian.csv  evo_reward_hebbian.csv  novelty_evo.csv  pure_evo.csv  reinforce.csv
phase3/: bp_results.csv  dg_results.csv  ff_results.csv  gaia_phase3.py  hybrid_results.csv  pc_results.csv  plot_phase3.py  results_phase3.md
phase4/: backprop_ac_results.csv  gaia_phase4.py  hybrid_fixed_results.csv  hybrid_meta_results.csv  meta_history.csv  plot_phase4.py  results_phase4.md
phase5/: ff_only_results.csv  gaia_phase5.py  meta_plasticity_hyperparams.csv  meta_plasticity_results.csv  neuromod_results.csv  plot_phase5.py  ppo_results.csv  results_phase5.md  results_summary.json
phase6/: gaia_phase6.py  neuromod_predcoding_results.csv  neuromod_temporal_results.csv  neuromod_v2_5sig_results.csv  phase6_results.json  plot_phase6.py  ppo_results.csv  results_phase6.md
phase7/: gaia_phase7.py
protocol/: Cargo.toml
protocol/src/: gossip.rs  lib.rs  peer.rs  types.rs
server-data/: jobs.json  workers.json
server-rust/: Cargo.toml  Dockerfile  README.md  config.example.yaml
server-rust/src/: config.rs  main.rs  models.rs  routes.rs  state.rs  storage.rs
server-rust/static/: index.html
wiki/: Architektur.md  Auto-Update-System.md  Benchmark-Ergebnisse.md  Deployment.md  Dezentralisierung.md  Epistemische-Architektur.md  Experimentelle-Phasen.md  Home.md  Hypothesen-Evolution.md  Meta-Learning.md  Methoden.md  Phase-10-Atari.md  Phase-8-Plan.md  Phase-9-Dezentralisierung.md  Rust-Migration.md  Scaling-Hypothesen.md  Server-API.md  _Sidebar.md
worker/: README.md  config.example.yaml  requirements.txt  run_all.py  setup.sh  worker.py
worker-rust/: Cargo.toml  README.md  build.sh  config.example.yaml
worker-rust/src/: client.rs  config.rs  gpu.rs  main.rs  server.rs  updater.rs  worker.rs
worker-rust/src/experiments/: bench_cartpole.rs  bipedal_walker.rs  env.rs  gpu_env.rs  gpu_eval.rs  gpu_methods.rs  lunar_lander.rs  methods.rs  mod.rs  n_link_pendulum.rs  native_runner.rs  optim.rs  policy.rs  ppo.rs  swimmer.rs
worker/experiments/: __init__.py  atari_eval.py  bipedal_cma.py  bipedal_es.py  bipedal_hardcore.py  bipedal_pbt.py  cma_es.py  cnn_policy.py  curriculum.py  gpu_bipedal.py  gpu_cma.py  hybrid_ff.py  indirect.py  island_advanced.py  island_model.py  meta_learning.py  meta_learning_pure.py  neuromod.py  neuromod_island.py  neuromod_island_bipedal.py  openai_es.py  ppo_baseline.py  scaling.py  scaling_test.py
worker/results/phase7/: summary.json
worker/results/phase7/cma_es/: result.json  training.csv
worker/results/phase7/island_model/: result.json  training.csv
