[package]
name = "gaia-protocol"
version = "0.1.0"
edition = "2021"
description = "GAIA P2P gossip protocol — decentralized peer discovery and job distribution"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
