[package]
name = "gaia-server"
version = "0.1.0"
edition = "2021"
description = "GAIA central orchestration server"

[[bin]]
name = "gaia-server"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["default"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
tokio-util = { version = "0.7", features = ["io"] }
uuid = { version = "1", features = ["v4"] }
