[package]
name = "gaia-worker"
version = "0.5.7"
edition = "2021"
description = "GAIA distributed experiment worker — connects outbound to gaia-server"

[[bin]]
name = "gaia-worker"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
sha2 = "0.10"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
